AquaMesh:MAIN Change vh with dvh for phone to use the current visible height (ignore black parts that usually are counted for when using vh)

--- a/apps/aquamesh/src/components/Dasboard/tabs.scss
+++ b/apps/aquamesh/src/components/Dasboard/tabs.scss
@@ -76,7 +76,7 @@
     // NOTE use the whole viewport and substract (1) header's height, (2) main
     // content's top padding, (3) tab bar height, and (4) main content's bottom
     // padding
-    height: calc(100vh - 36px - 16px - 36px - 24px);
+    height: calc(100dvh - 36px - 16px - 36px - 24px);
 
     display: none;
 
